--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             </ul>
 
             <ul class="header-social">
-                <li><a href="https://www.facebook.com/rafiurx.rahman"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="https://twitter.com/oreya_KAIDO"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/rafiurx.rahman" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/oreya_KAIDO"target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 
             </ul>
         </nav>
@@ -546,9 +546,9 @@
             <div class="column large-7 medium-full contact-social">
                 <h4>Social</h4>
                 <ul>
-                    <li><a href="https://www.facebook.com/rafiurx.rahman" title="Facebook">Facebook</a></li>
-                    <li><a href="https://twitter.com/oreya_KAIDO" title="Twitter">Twitter</a></li>
-                    <li><a href="https://www.instagram.com/r_x_r_2_s_i_x/" title="Instagram">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/rafiurx.rahman" target="_blank"title="Facebook">Facebook</a></li>
+                    <li><a href="https://twitter.com/oreya_KAIDO"target="_blank" title="Twitter">Twitter</a></li>
+                    <li><a href="https://www.instagram.com/r_x_r_2_s_i_x/"target="_blank" title="Instagram">Instagram</a></li>
                 </ul>
             </div>
 
