--- a/index.html
+++ b/index.html
@@ -385,8 +385,7 @@
                     <div class="item-folio">
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/Controller 1 Gif.gif" class="thumb-link" title="Third Person" data-size="1050x700">
-                                <img src="images/portfolio/Controller 1 Gif.gif" 
-                                     srcset="images/portfolio/Controller 1 Gif.gif, images/portfolio/Controller 1 Gif.gif" alt="">
+                                <img src="images/portfolio/Controller 1 Gif.gif"  alt="">
                             </a>    
                             <a href="https://www.behance.net/gallery/166960063/Character-Controller-3D/modules/941594575" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -410,8 +409,7 @@
                     <div class="item-folio">
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/Controller 2 Gif.gif" class="thumb-link" title="First Person" data-size="1050x700">
-                                <img src="images/portfolio/Controller 2 Gif.gif" 
-                                     srcset="images/portfolio/Controller 2 Gif.gif, images/portfolio/Controller 2 Gif.gif" alt="">
+                                <img src="images/portfolio/Controller 2 Gif.gif" alt="">
                             </a>
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -434,8 +432,7 @@
                             
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/PWG preview Gif.gif" class="thumb-link" title="Procedural World Generation" data-size="1050x700">
-                                <img src="images/portfolio/PWG preview Gif.gif"
-                                     srcset="images/portfolio/PWG preview Gif.gif, images/portfolio/PWG preview Gif.gif" alt="">
+                                <img src="images/portfolio/PWG preview Gif.gif" alt="">
                             </a>
                             <a href="#0" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -457,8 +454,7 @@
                     <div class="item-folio">
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/SIF preview Gif.gif" class="thumb-link" title="Scriptable Inventory Framework" data-size="1050x700">
-                                <img src="images/portfolio/SIF preview Gif.gif" 
-                                     srcset="images/portfolio/SIF preview Gif.gif, images/portfolio/SIF preview Gif.gif" alt="">
+                                <img src="images/portfolio/SIF preview Gif.gif"alt="">
                             </a>
                             <a href="#0" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -483,8 +479,7 @@
                             
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/MBS Preview Gif.gif" class="thumb-link" title="Palmeira" data-size="1050x700">
-                                <img src="images/portfolio/MBS Preview Gif.gif"
-                                     srcset="images/portfolio/MBS Preview Gif.gif, images/portfolio/MBS Preview Gif.gif" alt="">
+                                <img src="images/portfolio/MBS Preview Gif.gif" alt="">
                             </a>
                             <a href="#0" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
