--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                     <a href="#contact" class="btn btn--stroke full-width">Contact Me</a>
                 </div>
 
-                <!--
+                
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="#0" class="btn btn--primary full-width">Download CV</a>
+                    <a href="resume/RXRresume.pdf" class="btn btn--primary full-width">Download CV</a>
                 </div>
-                -->
+                
             </div>
 
         </div> <!-- end about-me -->
