--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 
 <body id="top">
 
+    <!--
     <div id="preloader">
         <div id="loader"></div>
-    </div>
+    </div> -->
 
     <!-- site header
     ================================================== -->
